Reworked main (top corner) navigation links.

--- a/_includes/themes/socialgeeks/homepage.html
+++ b/_includes/themes/socialgeeks/homepage.html
@@ -2,13 +2,14 @@
 	<div class="background">
 		<div class="container">
 			<div class="logo"><img src="/public/images/main/logo.png" alt="SocialGeeks" /></div>
-			<H1 class="slogan"><span>A place to connect, explore and learn with others</span><br /><span>who passionately pursue their interests.</span></H1>
-			<div class="subMenu">
-				<img src="/public/images/main/hButton_blog.png" alt="Blog" />
-				<img src="/public/images/main/hButton_reportBug.png" alt="Report Bug" />
-				<img src="/public/images/main/hButton_privacy.png" alt="Privacy" />
-				<img src="/public/images/main/hButton_help.png" alt="Help" />
-			</div>
+			<h1 class="slogan"><span>A place to connect, explore and learn with others</span><br /><span>who passionately pursue their interests.</span></h1>
+			<ul class="subMenu">
+				<li><a href="">About</a></li>
+				<li><a href="">Blog</a></li>
+				<li><a href="">Events</a></li>
+				<li><a href="">Contact</a></li>
+				<li><a href="">Sponsors</a></li>
+			</ul>
 			<div class="signUp">
 				<div class="new">New to SocialGeeks?<br /><span>It's fast, simple and free to sign up.</span></div>
 				<div class="button"><img src="public/images/main/button_signUp.png" alt="Sign Up!" id="signUpButton" /></div>
