--- a/_includes/themes/socialgeeks/page.html
+++ b/_includes/themes/socialgeeks/page.html
@@ -2,20 +2,13 @@
 	<div class="background">
 		<div class="container">
 			<div class="logo"><a href="/"><img src="/public/images/main/logoSub.png" alt="SocialGeeks" border="0" /></a></div>
-			<div id="accountMenu">
-				<div class="avatar avatar24" style="background-image: url('/public/cache/avatars/_24.PNG');" ></div>
-				<div id="toggle"></div>
-				<div id='accountMenuPanel'>
-					<ul>
-						<li><a href="">Home</a></li>
-						<li>Settings</li>					
-						<li>Privacy</li>
-						<li>Connections</li>
-						<li>Notifications</li>
-						<li><a href="/users/signout.php">Sign out</a></li>
-					</ul>
-				</div>
-			</div>
+			<ul class="subMenu">
+				<li><a href="">About</a></li>
+				<li><a href="">Blog</a></li>
+				<li><a href="">Events</a></li>
+				<li><a href="">Contact</a></li>
+				<li><a href="">Sponsors</a></li>
+			</ul>
 		</div>
 	</div>
 </div>
