--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,20 @@ h1 {
 #header .subMenu {
 	position: absolute;
 	top: 14px; right: 0px;
+	margin: 0px;
+}
+
+#header .subMenu a {
+	text-decoration: none;
+	color: #FFFFFF;
+	font-family: Anivers, sans-serif;
+	font-size: 13px;
+	margin-left: 15px;
+}
+
+#header .subMenu li {
+	list-style: none;
+	display: inline-block;
 }
 
 #header .subMenu img { margin-left: 20px; }
@@ -239,6 +253,25 @@ h1 {
 	position: absolute;
 	top: 4px;
 }	
+
+#headerSub .subMenu {
+	position: absolute;
+	top: 20px; right: 0px;
+	margin: 0px;
+}
+
+#headerSub .subMenu a {
+	text-decoration: none;
+	color: #FFFFFF;
+	font-family: Anivers, sans-serif;
+	font-size: 13px;
+	margin-left: 15px;
+}
+
+#headerSub .subMenu li {
+	list-style: none;
+	display: inline-block;
+}
 
 #headerSub #accountMenu {
 	position: absolute;
