Added liquid code to output three different navigation types: event, post, page.

--- a/_includes/themes/socialgeeks/navigation.html
+++ b/_includes/themes/socialgeeks/navigation.html
@@ -1,10 +1,22 @@
 <div id="navigation">
 
+{% if page.navigation contains 'post' %}
+
 // navigation: post
+
+{% endif %}
+
+{% if page.navigation contains 'event' %}
 
 // navigation: event
 
+{% endif %}
+
+{% if page.navigation contains 'page' %}
+
 // navigation: page
+
+{% endif %}
 
 </div>
 
