--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -2,8 +2,8 @@
 
 <ul class="posts">
   {% for post in site.posts %}
-  	{% if post.category == "event" %}
-    	<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.category }}</a></li>
+  	{% if post.category contains "event" %}
+    	<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endif %}
   {% endfor %}
 </ul>
@@ -12,7 +12,7 @@
 
 <ul class="posts">
   {% for post in site.posts %}
-  	{% if post.category == "blog" %}
+  	{% if post.category contains "post" %}
     	<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endif %}
   {% endfor %}
