Move about.md to about.html. Link up about.html from _includes/themes/socialgeeks/homepage.html and index.html

--- a/_includes/themes/socialgeeks/homepage.html
+++ b/_includes/themes/socialgeeks/homepage.html
@@ -4,7 +4,7 @@
 			<div class="logo"><img src="/public/images/main/logo.png" alt="SocialGeeks" /></div>
 			<h1 class="slogan"><span>A place to connect, explore and learn with others</span><br /><span>who passionately pursue their interests.</span></h1>
 			<ul class="subMenu">
-				<li><a href="">About</a></li>
+				<li><a href="/about.html">About</a></li>
 				<li><a href="">Blog</a></li>
 				<li><a href="">Events</a></li>
 				<li><a href="">Contact</a></li>
