Add posts.html and events.html.  Link to posts and events from index.html

--- a/_includes/themes/socialgeeks/homepage.html
+++ b/_includes/themes/socialgeeks/homepage.html
@@ -5,8 +5,8 @@
 			<h1 class="slogan"><span>A place to connect, explore and learn with others</span><br /><span>who passionately pursue their interests.</span></h1>
 			<ul class="subMenu">
 				<li><a href="/about.html">About</a></li>
-				<li><a href="">Blog</a></li>
-				<li><a href="">Events</a></li>
+				<li><a href="/posts.html">Blog</a></li>
+				<li><a href="/events.html">Events</a></li>
 				<li><a href="">Contact</a></li>
 				<li><a href="">Sponsors</a></li>
 			</ul>
