Add placeholder for contact.html and sponsors.html. Add links to contact.html and sponsors.html

--- a/_includes/themes/socialgeeks/homepage.html
+++ b/_includes/themes/socialgeeks/homepage.html
@@ -7,8 +7,8 @@
 				<li><a href="/about.html">About</a></li>
 				<li><a href="/posts.html">Blog</a></li>
 				<li><a href="/events.html">Events</a></li>
-				<li><a href="">Contact</a></li>
-				<li><a href="">Sponsors</a></li>
+				<li><a href="/contact.html">Contact</a></li>
+				<li><a href="/sponsors.html">Sponsors</a></li>
 			</ul>
 			<div class="signUp">
 				<div class="new">New to SocialGeeks?<br /><span>It's fast, simple and free to sign up.</span></div>
