--- a/_includes/themes/socialgeeks/page.html
+++ b/_includes/themes/socialgeeks/page.html
@@ -3,11 +3,11 @@
 		<div class="container">
 			<div class="logo"><a href="/"><img src="/public/images/main/logoSub.png" alt="SocialGeeks" border="0" /></a></div>
 			<ul class="subMenu">
-				<li><a href="">About</a></li>
-				<li><a href="">Blog</a></li>
-				<li><a href="">Events</a></li>
-				<li><a href="">Contact</a></li>
-				<li><a href="">Sponsors</a></li>
+				<li><a href="/about.html">About</a></li>
+				<li><a href="/posts.html">Blog</a></li>
+				<li><a href="/events.html">Events</a></li>
+				<li><a href="/contact.html">Contact</a></li>
+				<li><a href="/sponsors.html">Sponsors</a></li>
 			</ul>
 		</div>
 	</div>
@@ -51,8 +51,8 @@
 						<div style="border-bottom: 1px dotted #4275b4; padding: 5px 15px 0 15px;"></div>
 						<div class="clear"></div>
 						<div style="padding: 15px 15px 10px 15px;">
-							<a href="/Bugs"><img src="/public/images/icons/beta.png" border="0" style="float: left; margin-right: 15px;" /></a>
-							<div class="betaNotice">SocialGeeks.com is currently available as a beta release.  Some could even call it 'alpha' but that's not as cool!  We recommend connecting with the <a href="/Blog"><strong>SocialGeeks Blog</strong></a> to keep up with the ongoing development if you are interested.  Be sure to <a href="/Bugs"><strong>submit any bugs</strong></a> you find!  Thanks!</div> 
+							<a href="https://github.com/SocialGeeks/socialgeeks.com" target="_blank"><img src="/public/images/icons/beta.png" border="0" style="float: left; margin-right: 15px;" /></a>
+							<div class="betaNotice">SocialGeeks.com is currently available as a beta release.  Some could even call it 'alpha' but that's not as cool!  We recommend connecting with the <a href="/posts.html"><strong>SocialGeeks Blog</strong></a> to keep up with the ongoing development if you are interested.  Be sure to <a href="https://github.com/SocialGeeks/socialgeeks.com" target="_blank"><strong>submit any bugs</strong></a> you find!  Thanks!</div> 
 							<div class="clear"></div>
 						</div>
 					</div>
