Remove post.html. Add navigation include to _includes/themes/socialgeeks/page.html

--- a/_includes/themes/socialgeeks/page.html
+++ b/_includes/themes/socialgeeks/page.html
@@ -43,6 +43,9 @@
 					<div style="margin-left: 12px; width: 345px;">
 						
 						<div style="padding: 15px 15px 10px 15px;">
+
+						{% include themes/socialgeeks/navigation.html %}
+
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
