--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,6 +219,10 @@ h1 {
 	background: url(/public/images/frames/highlightBox.png) center no-repeat;
 }
 
+.highlightBox a {
+	color: #222;
+}
+
 .highlightBox .panel {
 	float: left; 
 	width: 327px; 
@@ -243,6 +247,57 @@ h1 {
 .highlightBox h3 {
 	font-size: 16px;
 	margin-bottom: 4px;
+}
+
+.summaryBox h3 {
+	font-size: 24px;
+	color: #FFFFFF;
+	border-bottom: 1px solid #3B72BA;
+	padding-bottom: 4px;
+	margin: 10px 0 14px;
+	font-family: Anivers, sans-serif;
+	font-weight: normal;
+}
+
+.summaryBox h3 a {
+	text-decoration: none;
+	color: #FFFFFF;
+}
+
+.summaryBox .info {
+	float: left;
+	margin-left: 15px;
+	width: 350px;
+}
+
+.summaryBox .title {
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.summaryBox .title a {
+	text-decoration: none;
+	color: #FFFFFF;
+}
+
+.summaryBox .description {
+	margin-top: 5px;
+	font-size: 12px;
+	line-height: 14px;
+	color: #DDDDDD;
+}
+
+.summaryBox .date {
+	font-size: 10px;
+	color: #666666;
+}
+
+.summaryBox img {
+	float: left;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-khtml-border-radius: 6px;
+	-webkit-border-radius: 6px;
 }
 
 #signUpBox {
