Start of basic jekyll themes for events and blog post pages.

--- a/_includes/themes/socialgeeks/default.html
+++ b/_includes/themes/socialgeeks/default.html
@@ -14,15 +14,15 @@
 		<link href="rss.xml" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800" rel="stylesheet" type="text/css" />
-		<script src="public/js/jquery.min.js"></script>
-		<script src="public/js/jquery.dropotron.js"></script>
-		<script src="public/js/config.js"></script>
-		<script src="public/js/skel.min.js"></script>
-		<script src="public/js/skel-panels.min.js"></script>
+		<script src="/public/js/jquery.min.js"></script>
+		<script src="/public/js/jquery.dropotron.js"></script>
+		<script src="/public/js/config.js"></script>
+		<script src="/public/js/skel.min.js"></script>
+		<script src="/public/js/skel-panels.min.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="public/css/skel-noscript.css" />
-			<link rel="stylesheet" href="public/css/style.css" />
-			<link rel="stylesheet" href="public/css/style-desktop.css" />
+			<link rel="stylesheet" href="/public/css/skel-noscript.css" />
+			<link rel="stylesheet" href="/public/css/style.css" />
+			<link rel="stylesheet" href="/public/css/style-desktop.css" />
 		</noscript>
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
