--- a/_includes/themes/socialgeeks/homepage.html
+++ b/_includes/themes/socialgeeks/homepage.html
@@ -2,7 +2,7 @@
 	<header id="header">
 		<div class="container">
 
-			<a href="#" id="logo"></a>
+			<a href="index.html" id="logo"></a>
 			
 			<nav id="nav">
 				<ul>
