--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,6 +183,12 @@
 		margin: 0 2em 2em 0;
 	}
 	
+	.image-right
+	{
+		float: right;
+		margin: 0 0 2em 2em;
+	}
+	
 	.image-centered
 	{
 		display: block;
