Linked up most the dead links to placeholder pages.

--- a/_includes/themes/socialgeeks/homepage.html
+++ b/_includes/themes/socialgeeks/homepage.html
@@ -26,10 +26,10 @@
 						</ul>
 					</li> 
 					-->
-					<li><a href="#">About</a></li>
-					<li><a href="#">Events</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Sponsors</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="sponsors.html">Sponsors</a></li>
 				</ul>
 			</nav>
 
@@ -51,7 +51,7 @@
 					</h2>
 
 					<p><strong>Get Involved: </strong> &nbsp;Help us by becoming<br>a sponsor, mentor or geek contributor.</p>
-					<a href="#" class="button button-big button-icon button-icon-rarrow">Learn More</a>
+					<a href="/about.html" class="button button-big button-icon button-icon-rarrow">Get Involved</a>
 				</div>
 
 			</div>
