--- a/_includes/themes/socialgeeks/default.html
+++ b/_includes/themes/socialgeeks/default.html
@@ -45,7 +45,7 @@
 								Collect geeks, mentor, be mentored, use network to enhance, supplement, replace high school computer 
 								curriculum. Wash, repeat.
 							</p>
-							<a href="#" class="button button-alt button-icon button-icon-rarrow">Learn More</a>
+							<a href="/about.html" class="button button-alt button-icon button-icon-rarrow">Learn More</a>
 						</section>
 											
 					</div>
@@ -53,7 +53,7 @@
 					
 						<section>
 							<h2>Stay Connected</h2>
-							<span class="byline">Be informed by email of upcoming events and other happenings.</span>
+							<span class="byline">Be informed by email of upcoming events and other announcements.</span>
 							<p style="margin-top: 20px;">
 								<label>Name: </label><input type="text" />
 								<label>Email: </label><input type="text" />
@@ -67,11 +67,11 @@
 						<section>
 							<h2>INDEX</h2>
 							<ul class="style2">
-								<li><a href="#">Home</a></li>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Events</a></li>
-								<li><a href="#">Blog</a></li>
-								<li><a href="#">Sponsors</a></li>
+								<li><a href="/index.html">Home</a></li>
+								<li><a href="/about.html">About</a></li>
+								<li><a href="/events.html">Events</a></li>
+								<li><a href="/blog.html">Blog</a></li>
+								<li><a href="/sponsors.html">Sponsors</a></li>
 							</ul>
 						</section>
 					
