Add email address instead of contact box until we get dynamic content working.

--- a/_includes/themes/socialgeeks/default.html
+++ b/_includes/themes/socialgeeks/default.html
@@ -55,10 +55,8 @@
 							<h2>Stay Connected</h2>
 							<span class="byline">Be informed by email of upcoming events and other announcements.</span>
 							<p style="margin-top: 20px;">
-								<label>Name: </label><input type="text" />
-								<label>Email: </label><input type="text" />
+							While we are working on the site, please email us: <a href="mailto:socialgeek@gmail.com">socialgeek@gmail.com</a>
 							</p>
-							<a href="#" class="button button-alt button-icon button-icon-rarrow" style="margin-left: 60px;">Submit</a>
 						</section>
 					
 					</div>
